--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/constLayout"
     tools:context=".DetailActivity">
 
+    <ImageView
+        android:id="@+id/iv_back"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/back"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:clickable="true"/>
+
     <ScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/cl_btmInfo"
+        app:layout_constraintBottom_toTopOf="@+id/groundbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -29,143 +41,98 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:id="@+id/iv_face"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/faceicon"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/iv_itemImage"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_sellerInfo"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_itemImage">
+            <TextView
+                android:id="@+id/tv_sellerName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="난쉽"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="17dp"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:textColor="#FF000000"
+                app:layout_constraintStart_toEndOf="@+id/iv_face"
+                app:layout_constraintTop_toBottomOf="@+id/iv_itemImage" />
 
-                <ImageView
-                    android:id="@+id/iv_face"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="16dp"
-                    android:src="@drawable/faceicon"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tv_sellerAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="동래구 온천제2동"
+                android:textColor="#4C4B4B"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toEndOf="@+id/iv_face"
+                app:layout_constraintTop_toBottomOf="@+id/tv_sellerName" />
 
-                <TextView
-                    android:id="@+id/tv_sellerName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:text="난쉽"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/iv_face"
-                    app:layout_constraintTop_toTopOf="@+id/iv_face" />
-
-                <TextView
-                    android:id="@+id/tv_sellerAddress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="4dp"
-                    android:text="동래구 온천제2동"
-                    android:textColor="#4C4B4B"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/iv_face"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_sellerName" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="39.3 '("
-                    android:textColor="#009688"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/iv_smile"
-                    app:layout_constraintEnd_toStartOf="@+id/iv_smile"
-                    app:layout_constraintTop_toTopOf="@+id/iv_smile" />
-
-                <ImageView
-                    android:id="@+id/iv_smile"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/smile"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tv_sellerName" />
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="16dp"
-                    android:text="매너온도"
-                    android:textColor="#9F9D9D"
-                    android:textSize="13sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_smile" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:layout_width="75dp"
+                android:layout_height="45dp"
+                android:src="@drawable/mannertemperature"
+                android:layout_marginTop="19dp"
+                android:layout_marginEnd="19dp"
+                app:layout_constraintTop_toBottomOf="@+id/iv_itemImage"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <View
+                android:id="@+id/grayline"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#E1DCDC"
+                android:layout_marginTop="21dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_sellerName"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cl_sellerInfo" />
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
                 android:id="@+id/tv_iTemTitle"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="16dp"
                 android:text="샤넬 탑핸들 가방"
                 android:textColor="#000000"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/grayline"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cl_sellerInfo" />
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
                 android:id="@+id/tv_iTemDetail"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="16dp"
                 android:text="샤넬 트랜디 CC 탑핸들 스몰 램스킨 블랙 금장 플 랩백 !\n색상 : 블랙\n사이즈 : 25.5cm * 17.5cm * 8cm\n구성 : 본품, 더스트\n급하게 돈이 필요해서 팝니다 ㅠ ㅠ"
                 android:textColor="#000000"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_iTemTitle" />
+                android:textSize="15sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_iTemTitle"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
-
-    <ImageView
-        android:id="@+id/iv_back"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_btmInfo"
+        android:id="@+id/groundbar"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="#FFFFFFFF"
+        android:layout_height="56dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:id="@+id/ll_detail_like"
@@ -178,36 +145,37 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
             <ImageView
                 android:id="@+id/iv_detailLike"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/heart"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/heart" />
         </LinearLayout>
 
         <View
-            android:id="@+id/view"
+            android:id="@+id/groundbar_line"
             android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_height="38dp"
             android:background="#E1DCDC"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ll_detail_like"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/ll_detail_like" />
 
         <TextView
             android:id="@+id/tv_iTemDetailPrice"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="0dp"
             android:text="120,000원"
             android:textColor="#000000"
-            android:textSize="22sp"
+            android:textSize="23sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/view"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/groundbar"
+            app:layout_constraintBottom_toBottomOf="@+id/groundbar"
+            app:layout_constraintStart_toEndOf="@+id/groundbar_line" />
 
         <TextView
             android:layout_width="100dp"
@@ -219,10 +187,9 @@
             android:textColor="#FFFFFFFF"
             android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="@+id/groundbar"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
