--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,23 +6,21 @@
     android:layout_height="143dp">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/iconItemCardView"
+        android:id="@+id/item_cardview"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:layout_marginStart="16dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginVertical="16dp"
+        android:src="#FF000000"
+        app:cardCornerRadius="9dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
-            android:id="@+id/iconItem"
+            android:id="@+id/iv_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
             android:src="@drawable/sample1" />
     </androidx.cardview.widget.CardView>
 
@@ -30,47 +28,46 @@
         android:id="@+id/tv_itemTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:ellipsize="end"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="25dp"
         android:maxLines="2"
+        android:ellipsize="end"
         android:text="산지 한달된 선풍기 팝니다"
         android:textColor="#000000"
         android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iconItemCardView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/item_cardview" />
 
     <TextView
         android:id="@+id/tv_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginStart="15dp"
         android:text="서울 서대문구 창천동"
         android:textColor="#4C4B4B"
         android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_itemTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iconItemCardView"
-        app:layout_constraintTop_toBottomOf="@+id/tv_itemTitle" />
+        app:layout_constraintStart_toEndOf="@+id/item_cardview" />
 
     <TextView
         android:id="@+id/tv_price"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="23dp"
+        android:layout_marginStart="15dp"
         android:text="1,000원"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/tv_address"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iconItemCardView"
-        app:layout_constraintTop_toBottomOf="@+id/tv_address" />
-
+        app:layout_constraintStart_toEndOf="@+id/item_cardview" />
 
     <LinearLayout
         android:layout_width="100dp"
@@ -84,34 +81,45 @@
         <ImageView
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/chatting" />
+            android:src="@drawable/chatting"
+            app:layout_constraintTop_toTopOf="@+id/tv_chatCnt"
+            app:layout_constraintEnd_toStartOf="@+id/tv_chatCnt"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_chatCnt"/>
 
         <TextView
             android:id="@+id/tv_chatCnt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
+            android:layout_marginEnd="-1dp"
             android:text="25"
             android:textColor="#4C4B4B"
-            android:textSize="15sp" />
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="@+id/tv_likecnt"
+            app:layout_constraintEnd_toStartOf="@+id/tv_likecnt"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_likecnt" />
 
         <ImageView
             android:id="@+id/iv_like"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_marginStart="8dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/heart" />
+            android:layout_marginStart="10dp"
+            android:src="@drawable/heart"
+            app:layout_constraintTop_toTopOf="@+id/tv_chatCnt"
+            app:layout_constraintEnd_toStartOf="@+id/tv_chatCnt"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_chatCnt"/>
 
         <TextView
             android:id="@+id/tv_likecnt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
+            android:layout_marginEnd="16dp"
             android:text="13"
             android:textColor="#4C4B4B"
-            android:textSize="15sp" />
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </LinearLayout>
 
