--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_bar"
+        android:id="@+id/main_cl_bar"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/tv_apartment"
+            android:id="@+id/main_apartment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="내배캠동"
@@ -25,17 +25,17 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <ImageView
-            android:id="@+id/iv_down"
+            android:id="@+id/main_down"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:src="@drawable/downarrow"
             android:layout_marginStart="7dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_apartment"
-            app:layout_constraintTop_toTopOf="@+id/tv_apartment"
-            app:layout_constraintStart_toEndOf="@+id/tv_apartment"/>
+            app:layout_constraintBottom_toBottomOf="@+id/main_apartment"
+            app:layout_constraintTop_toTopOf="@+id/main_apartment"
+            app:layout_constraintStart_toEndOf="@+id/main_apartment"/>
 
         <ImageView
-            android:id="@+id/iv_notification"
+            android:id="@+id/main_notification"
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:src="@drawable/bell"
@@ -51,11 +51,11 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/cl_bar"
+        app:layout_constraintTop_toBottomOf="@+id/main_cl_bar"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fb_scrollup"
+        android:id="@+id/main_scrollup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/uparrow"
