--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/detail_itemImage"
+                android:id="@+id/detail_Image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
@@ -37,11 +37,11 @@
                 android:src="@drawable/faceicon"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/detail_itemImage"
+                app:layout_constraintTop_toBottomOf="@+id/detail_Image"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
-                android:id="@+id/detail_sellerName"
+                android:id="@+id/detail_solder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="난쉽"
@@ -51,10 +51,10 @@
                 android:textStyle="bold"
                 android:textColor="#FF000000"
                 app:layout_constraintStart_toEndOf="@+id/detail_face"
-                app:layout_constraintTop_toBottomOf="@+id/detail_itemImage" />
+                app:layout_constraintTop_toBottomOf="@+id/detail_Image" />
 
             <TextView
-                android:id="@+id/detail_sellerAddress"
+                android:id="@+id/detail_Address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="동래구 온천제2동"
@@ -63,7 +63,7 @@
                 android:textSize="12dp"
                 android:layout_marginStart="8dp"
                 app:layout_constraintStart_toEndOf="@+id/detail_face"
-                app:layout_constraintTop_toBottomOf="@+id/detail_sellerName" />
+                app:layout_constraintTop_toBottomOf="@+id/detail_solder" />
 
             <ImageView
                 android:layout_width="75dp"
@@ -71,7 +71,7 @@
                 android:src="@drawable/mannertemperature"
                 android:layout_marginTop="19dp"
                 android:layout_marginEnd="19dp"
-                app:layout_constraintTop_toBottomOf="@+id/detail_itemImage"
+                app:layout_constraintTop_toBottomOf="@+id/detail_Image"
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <View
@@ -80,12 +80,12 @@
                 android:layout_height="1dp"
                 android:background="#E1DCDC"
                 android:layout_marginTop="21dp"
-                app:layout_constraintTop_toBottomOf="@+id/detail_sellerName"
+                app:layout_constraintTop_toBottomOf="@+id/detail_solder"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
-                android:id="@+id/detail_iTemTitle"
+                android:id="@+id/detail_Id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="샤넬 탑핸들 가방"
@@ -100,7 +100,7 @@
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
-                android:id="@+id/detail_iTemDetail"
+                android:id="@+id/detail_Description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="샤넬 트랜디 CC 탑핸들 스몰 램스킨 블랙 금장 플 랩백 !\n색상 : 블랙\n사이즈 : 25.5cm * 17.5cm * 8cm\n구성 : 본품, 더스트\n급하게 돈이 필요해서 팝니다 ㅠ ㅠ"
@@ -109,7 +109,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/detail_iTemTitle"
+                app:layout_constraintTop_toBottomOf="@+id/detail_Id"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -149,7 +149,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/detail_detailLike"
+                android:id="@+id/detail_heart"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/heart" />
@@ -166,7 +166,7 @@
             app:layout_constraintStart_toEndOf="@+id/detail_like" />
 
         <TextView
-            android:id="@+id/detail_iTemDetailPrice"
+            android:id="@+id/detail_Price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
