--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,8 @@
         <item name="windowNoTitle">true</item>
         <!-- 풀스크린 모드 활성화 -->
         <item name="android:windowFullscreen">true</item>
+        <!-- 상태 표시줄 (status bar) 투명으로 설정 -->
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="Theme.AppleMarket" parent="Base.Theme.AppleMarket" />
